# agent-memory-os

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
adapters/claude/: CLAUDE.template.md
adapters/codex/: config.template.toml  instructions.md  policy.template.toml  runtime.template.md
apps/compiler/: main.py
apps/gateway/: main.py
apps/workers/: compaction_worker.py  graph_sync_worker.py  ingest_worker.py  policy_audit_worker.py  recovery_worker.py  reporting_worker.py  session_coordination_worker.py
apps/writeback/: approval.py  archive.py  dedupe.py  main.py  merge.py  promotion.py
brain/adapters/: claude_adapter.py  codex_adapter.py  generic_adapter.py
brain/api/: context.py  decisions.py  entities.py  memory.py  memory_api.py  search.py
brain/models/: decision.py  entity.py  event.py  memory_entry.py  session_delta.py
brain/services/: budgeting.py  context_compiler.py  context_pack_validation.py  linking.py  memory_hygiene.py  memory_retrieval_stub.py  persistence.py  ranking.py  relationship_traversal.py  retrieval.py  summarization.py  tiering.py  trust.py  writeback.py
docs/: agent-memory-os_repo_str.md  architecture.md  operations.md  phase11_plus_plan.md  roadmap.md  rollout_plan.md  security.md  token_budgeting.md
docs/decisions/: ADR-0001-canonical-shared-memory.md  README.md  (+5 more)
mcp/: prompts.py  resources.py  server.py  tools.py
schemas/: context_pack.schema.json  entity.schema.json  event.schema.json  session_delta.schema.json
tests/: conftest.py  test_compiler.py  test_dedupe.py  test_future_phase_scaffolds.py  test_graph_links.py  test_linking_and_ranking.py  test_mcp_integration.py  test_mcp_server.py  test_memory_api.py  test_phase6_phase7_services.py  test_phase9_phase10.py  test_retrieval_and_validation.py  test_scaffold_population.py  test_trust_and_budgeting.py
(+46 files in other folders)
